--- a/src/stylesheets/Authors.css
+++ b/src/stylesheets/Authors.css
@@ -1,3 +1,10 @@
 .authors-list li {
     list-style: none;
+    font-size: 25px;
+    margin: 15px 100px 15px 15px;
+}
+
+#authors-heading {
+    margin-top: 40px;
+    
 }
