--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -18,3 +18,22 @@
     grid-column: 2;
     margin-top: 150px;
 }
+
+@media screen and (max-width: 525px) {
+    .about-page {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+    #about-heading {
+        grid-column: 3;
+    }
+
+    #about-subheading {
+        grid-column: 2 / 5;
+    }
+
+    .readMe {
+        grid-column: 2 / 5;
+    }
+}
